--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^20.0.5",
     "@angular/platform-browser-dynamic": "^20.0.5",
     "@angular/router": "^20.0.5",
+    "@fontsource/roboto": "^5.2.6",
     "@tailwindcss/postcss": "^4.1.11",
     "ag-grid-angular": "^34.0.2",
     "ag-grid-community": "^34.0.2",
