--- a/nginx.conf
+++ b/nginx.conf
@@ -5,15 +5,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Handle Angular routes
     location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Optional: cache static assets (improves performance)
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public";
+        try_files $uri /index.html;
     }
 }
