--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,14 @@ server {
     index index.html;
 
     location / {
-        try_files $uri /index.html;
+        # First try to serve file, then fallback to index.html (SPA routing)
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Optional: serve static assets efficiently
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
