--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production --base-href /",
     "start": "serve -s dist/coal -l $PORT",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
