deploy: add Dockerfile + nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,61 @@
+# default.conf - server-only (safe to place under /etc/nginx/conf.d/)
 server {
     listen 80;
+    listen [::]:80;
     server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
 
+    # Health probe
+    location = /healthz {
+        add_header Content-Type text/plain;
+        return 200 "ok\n";
+    }
+
+    # SPA routing: try file, directory, then fallback to index.html
     location / {
-        # First try to serve file, then fallback to index.html (SPA routing)
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: serve static assets efficiently
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
-        expires 6M;
+    # Static assets: long caching (fingerprinted files assumed immutable)
+    location ~* \.(?:js|css|woff2?|ttf|eot|otf|png|jpg|jpeg|gif|svg|ico|webp|avif)$ {
+        try_files $uri =404;
         access_log off;
-        add_header Cache-Control "public";
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header X-Content-Type-Options "nosniff";
+    }
+
+    # Source maps — shorter caching
+    location ~* \.map$ {
+        try_files $uri =404;
+        access_log off;
+        add_header Cache-Control "public, max-age=86400";
+    }
+
+    # index.html and other HTML should not be cached
+    location = /index.html {
+        try_files $uri =404;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # Security headers (added per-response)
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+    # gzip settings (these are safe inside server block; main gzip directives are usually in http, but nginx accepts them here)
+    gzip on;
+    gzip_min_length 1000;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_vary on;
+    gzip_proxied any;
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        internal;
+        root /usr/share/nginx/html;
     }
 }
