--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --configuration production --base-href /",
-    "start": "serve -s dist/coal -l $PORT",
+    "start": "serve -s dist/coal -l 4200",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
